--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   encoding: unicode
   database: development
   pool: 5
-  username: jones
+  username: <% ENV['PG_USER'] %>
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -39,7 +39,7 @@ test:
   encoding: unicode
   database: test
   pool: 5
-  username: jones
+  username: <% ENV['PG_USER'] %>
   password:
 
 production:
